# ros2_transformers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: app_config.yaml  barclamp_config.yaml  block_config.yaml  cylinder.yaml  cylinder_config.yaml  gpd_config.yaml  gz_gui.config  ladle.yaml  loco_config.yaml  mtc_salad.rviz  mustard.yaml  panda_object.yaml  ros_gz_bridge.yaml  rt1_demo_app.yaml  rviz_gui.rviz  salad_config.yaml  sensor_peralta.rviz  strawberry.yaml
config/calib/: camera.yaml
config/gui/: rviz_gui.rviz
debug_tools/: dump_all_params.py
include/ros2_transformers/: octo.hpp  rt1.hpp
launch/: barclamp_world.py  block_world.launch.xml  block_world.py  cylinder_world.launch  gazebo_pick_place.launch  gazebo_strawberry.launch  gz_launch.py  mbodied_launch.py  moveit_launch.py  panda.launch  panda_world.launch  salad.launch  salad_world.launch  sensor_block.launch  sensor_data_gazebo.launch  spoon_world.launch  stack_blocks_launch.py  task_launch.py
moveit/: kinematics.yaml
object_models/big_spoon/: metadata.pbtxt  model.config  model.sdf
object_models/green_bowl/: metadata.pbtxt
object_models/mustard_bottle/: model.config  model.sdf
object_models/red_bowl/: model.config  model.sdf
object_models/serving_bowl/: metadata.pbtxt  model.config
robots/locobot_wx250s/control/sim/: gz_control.urdf.xacro
robots/locobot_wx250s/description/urdf/: locobot.urdf.xacro
robots/locobot_wx250s/description/urdf/arms/: ar_tag.urdf.xacro  mobile_arm.urdf.xacro
robots/locobot_wx250s/description/urdf/base/: kobuki.urdf.xacro
robots/locobot_wx250s/description/urdf/body/: battery.urdf.xacro  plate.urdf.xacro
robots/locobot_wx250s/moveit/: ros_controller_interface.yaml
ros2_agents/: CMakeLists.txt  package.xml
ros2_agents/config/: app_config.yaml  ros_gz_bridge.yaml
ros2_agents/include/ros2_agents/: actor.hpp  agent.hpp  client.hpp  observer.hpp  octo.hpp  rt1.hpp
ros2_agents/include/ros2_agents/util/: generic_subscription.hpp  image_processing.hpp
ros2_agents/launch/: gz_launch.py  mbodied_launch.py  moveit_launch.py  robot_description_launch.py  task_launch.py
ros2_agents/moveit/: sensors_3d.yaml
ros2_agents/robots/bipedal/description/urdf/: bipedal.urdf.xacro
ros2_agents/robots/locobot_wx250s/control/: ros_controllers.yaml
ros2_agents/robots/locobot_wx250s/control/sim/: gz_control.urdf.xacro  gz_sense.urdf.xacro  initial_positions.yaml
ros2_agents/robots/locobot_wx250s/description/: package.xml
ros2_agents/robots/locobot_wx250s/description/urdf/: colors.urdf.xacro  locobot.urdf.xacro
ros2_agents/robots/locobot_wx250s/description/urdf/arms/: mobile_arm.urdf.xacro  mobile_wx250s.urdf.xacro
ros2_agents/robots/locobot_wx250s/description/urdf/base/: kobuki.urdf.xacro
ros2_agents/robots/locobot_wx250s/description/urdf/body/: camera_tower.urdf.xacro  pan_and_tilt.urdf.xacro  plate.urdf.xacro
ros2_agents/robots/locobot_wx250s/moveit/: kinematics.yaml  locobot.srdf.xacro
ros2_agents/sim/object_descriptions/sdf/: bowl.sdf
ros2_agents/sim/object_descriptions/urdf/camera/: camera.urdf.xacro  camera_macro.urdf.xacro
ros2_agents/sim/object_descriptions/urdf/objects/: barclamp.urdf.xacro  block.urdf.xacro  bowl.urdf.xacro  cylinder.urdf.xacro  strawberry.urdf.xacro  table.urdf.xacro
ros2_agents/sim/object_descriptions/urdf/robots/: panda_camera.urdf.xacro
ros2_agents/sim/worlds/: empty.sdf
ros2_agents/src/: demo_app.cpp  octo.cpp  rt1.cpp  rt1_demo_scene.cpp
ros2_agents/tasks/: cluttered.yaml  living_tea.yaml  pick_coke_can.yaml
ros2_agents_interfaces/: CMakeLists.txt  package.xml
ros2_agents_interfaces/action/: Mbodied.action  SampleGraspPoses.action
ros2_agents_interfaces/msg/: BaseControl.msg  EEFControl.msg  MbodiedBasicControl.msg
rviz/: mtc.rviz
sim/object_descriptions/sdf/: bowl.sdf
sim/object_descriptions/urdf/: colors.urdf.xacro
sim/object_descriptions/urdf/objects/: block.urdf.xacro  bowl.urdf.xacro  table.urdf.xacro
sim/object_descriptions/urdf/robots/: panda_camera.urdf.xacro
sim/worlds/: empty.sdf
src/: log.md  octo.cpp  rt1.cpp  rt1_demo_app.cpp
tasks/: cluttered.yaml  pick_coke_can.yaml  pick_coke_can_high_fidelity.yaml  stack_blocks.yaml
tasks/sim/: stack_blocks_task.yaml
tasks/sim/object_descriptions/meshes/objects/: bowl.dae
tasks/sim/object_descriptions/urdf/: colors.urdf.xacro
tasks/sim/object_descriptions/urdf/objects/: barclamp.urdf.xacro  block.urdf.xacro  table.urdf.xacro
tasks/sim/third_party_object_descriptions/green_bowl/: model.config
tasks/sim/worlds/: empty.sdf
urdf/: colors.urdf.xacro
urdf/camera/: camera.urdf.xacro
urdf/objects/: barclamp.urdf.xacro  block.urdf.xacro  strawberry.urdf.xacro  table.urdf.xacro
worlds/: empty.sdf  world2.sdf
