<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_transformers</name>
  <version>0.0.0</version>
  <description>For deploying and fine-tuning multi-modal generalist agent models.</description>
  <maintainer email="peraltas@seas.upenn.edu"></maintainer>
  <license>MIT</license>

  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>dgl_ros_models</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>